<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <EditText
        android:id="@+id/editTextName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nombre_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextLastname2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/lastname_hind"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextDividendo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/dividendo_hind"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextDivisor2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/divisor_hind"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/numero_hind"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonNext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickThirdActivity"
        android:text="@string/button_next_text" />

    <Button
        android:id="@+id/buttonClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_close" />

</LinearLayout>