<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:hint="@string/nombre_hint"
        android:inputType="text"
        android:visibility="visible" />

    <EditText
        android:id="@+id/editTextLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/lastname_hind"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextDividendo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/dividendo_hind"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextDivisor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/divisor_hind"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextEntero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/entera_hind"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextResiduo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/residuo_hind"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextInvertido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/invertido_hind"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:onClick="onClickShowSecondActivity"
        android:text="@string/button_next_text" />

    <Button
        android:id="@+id/buttonResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_show_answer_text" />

</LinearLayout>